# suiteOrbits

./: .gitignore  .readthedocs.yml  README.rst  pyproject.toml  tox.ini
.github/workflows/: tests.yml
docs/: conf.py  index.rst
docs/api/: suiteorbits.Suite.rst  suiteorbits.eval_potential.rst  suiteorbits.general.rst  suiteorbits.plot.rst  suiteorbits.scatter.rst  suiteorbits.varyE_fixLz.rst
docs_new/: conf.py  index.rst
examples/: bar_example.ipynb  example.ipynb
licenses/: LICENSE.rst
suiteorbits/: __init__.py  constants.py  example_c.c  plot.py  utils.py
suiteorbits/suite/: __init__.py  initializers.py  suite.py  testing.ipynb  testtest.ipynb
suiteorbits/util/: __init__.py
tests/: test_initializers.py  test_square.py
